--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,270 +204,255 @@
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>30.7</td>\n",
+       "      <th>5</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>16.9</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>NNW</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>SSE</td>\n",
-       "      <td>NW</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>E</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1016.1</td>\n",
-       "      <td>1010.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20.4</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1023.8</td>\n",
+       "      <td>1021.7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>14.8</td>\n",
        "      <td>No</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>7.1</td>\n",
-       "      <td>28.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>N</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>NNW</td>\n",
-       "      <td>NNW</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1020.0</td>\n",
-       "      <td>1016.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>28.2</td>\n",
-       "      <td>No</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>12.5</td>\n",
-       "      <td>19.9</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>4.2</td>\n",
        "      <td>8.4</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>ESE</td>\n",
+       "      <td>SE</td>\n",
        "      <td>43.0</td>\n",
-       "      <td>ENE</td>\n",
-       "      <td>ENE</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>ESE</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>...</td>\n",
        "      <td>47</td>\n",
-       "      <td>1024.0</td>\n",
-       "      <td>1022.8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14.5</td>\n",
-       "      <td>18.3</td>\n",
+       "      <td>1024.6</td>\n",
+       "      <td>1022.2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>17.3</td>\n",
        "      <td>No</td>\n",
        "      <td>0.0</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>12.5</td>\n",
-       "      <td>26.9</td>\n",
+       "      <th>7</th>\n",
+       "      <td>8.3</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>NW</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>SSW</td>\n",
-       "      <td>WNW</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>E</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>E</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1021.0</td>\n",
-       "      <td>1016.2</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1026.2</td>\n",
+       "      <td>1024.2</td>\n",
        "      <td>6</td>\n",
        "      <td>7</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>25.9</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>15.5</td>\n",
        "      <td>No</td>\n",
        "      <td>0.0</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>12.3</td>\n",
-       "      <td>30.2</td>\n",
+       "      <th>8</th>\n",
+       "      <td>8.8</td>\n",
+       "      <td>19.5</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>NW</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>NW</td>\n",
-       "      <td>WNW</td>\n",
-       "      <td>31.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>E</td>\n",
+       "      <td>ENE</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1009.6</td>\n",
-       "      <td>1009.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23.8</td>\n",
-       "      <td>28.6</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1026.1</td>\n",
+       "      <td>1022.7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>18.9</td>\n",
        "      <td>No</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>E</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>ESE</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1024.1</td>\n",
+       "      <td>1020.7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>0.0</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>366 rows × 22 columns</p>\n",
+       "<p>10 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     MinTemp  MaxTemp  Rainfall  Evaporation  Sunshine WindGustDir  \\\n",
-       "0        8.0     24.3       0.0          3.4       6.3          NW   \n",
-       "1       14.0     26.9       3.6          4.4       9.7         ENE   \n",
-       "2       13.7     23.4       3.6          5.8       3.3          NW   \n",
-       "3       13.3     15.5      39.8          7.2       9.1          NW   \n",
-       "4        7.6     16.1       2.8          5.6      10.6         SSE   \n",
-       "..       ...      ...       ...          ...       ...         ...   \n",
-       "361      9.0     30.7       0.0          7.6      12.1         NNW   \n",
-       "362      7.1     28.4       0.0         11.6      12.7           N   \n",
-       "363     12.5     19.9       0.0          8.4       5.3         ESE   \n",
-       "364     12.5     26.9       0.0          5.0       7.1          NW   \n",
-       "365     12.3     30.2       0.0          6.0      12.6          NW   \n",
+       "   MinTemp  MaxTemp  Rainfall  Evaporation  Sunshine WindGustDir  \\\n",
+       "0      8.0     24.3       0.0          3.4       6.3          NW   \n",
+       "1     14.0     26.9       3.6          4.4       9.7         ENE   \n",
+       "2     13.7     23.4       3.6          5.8       3.3          NW   \n",
+       "3     13.3     15.5      39.8          7.2       9.1          NW   \n",
+       "4      7.6     16.1       2.8          5.6      10.6         SSE   \n",
+       "5      6.2     16.9       0.0          5.8       8.2          SE   \n",
+       "6      6.1     18.2       0.2          4.2       8.4          SE   \n",
+       "7      8.3     17.0       0.0          5.6       4.6           E   \n",
+       "8      8.8     19.5       0.0          4.0       4.1           S   \n",
+       "9      8.4     22.8      16.2          5.4       7.7           E   \n",
        "\n",
-       "     WindGustSpeed WindDir9am WindDir3pm  WindSpeed9am  ...  Humidity3pm  \\\n",
-       "0             30.0         SW         NW           6.0  ...           29   \n",
-       "1             39.0          E          W           4.0  ...           36   \n",
-       "2             85.0          N        NNE           6.0  ...           69   \n",
-       "3             54.0        WNW          W          30.0  ...           56   \n",
-       "4             50.0        SSE        ESE          20.0  ...           49   \n",
-       "..             ...        ...        ...           ...  ...          ...   \n",
-       "361           76.0        SSE         NW           7.0  ...           15   \n",
-       "362           48.0        NNW        NNW           2.0  ...           22   \n",
-       "363           43.0        ENE        ENE          11.0  ...           47   \n",
-       "364           46.0        SSW        WNW           6.0  ...           39   \n",
-       "365           78.0         NW        WNW          31.0  ...           13   \n",
+       "   WindGustSpeed WindDir9am WindDir3pm  WindSpeed9am  ...  Humidity3pm  \\\n",
+       "0           30.0         SW         NW           6.0  ...           29   \n",
+       "1           39.0          E          W           4.0  ...           36   \n",
+       "2           85.0          N        NNE           6.0  ...           69   \n",
+       "3           54.0        WNW          W          30.0  ...           56   \n",
+       "4           50.0        SSE        ESE          20.0  ...           49   \n",
+       "5           44.0         SE          E          20.0  ...           57   \n",
+       "6           43.0         SE        ESE          19.0  ...           47   \n",
+       "7           41.0         SE          E          11.0  ...           57   \n",
+       "8           48.0          E        ENE          19.0  ...           48   \n",
+       "9           31.0          S        ESE           7.0  ...           32   \n",
        "\n",
-       "     Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  Temp3pm  \\\n",
-       "0         1019.7       1015.0         7         7     14.4     23.6   \n",
-       "1         1012.4       1008.4         5         3     17.5     25.7   \n",
-       "2         1009.5       1007.2         8         7     15.4     20.2   \n",
-       "3         1005.5       1007.0         2         7     13.5     14.1   \n",
-       "4         1018.3       1018.5         7         7     11.1     15.4   \n",
-       "..           ...          ...       ...       ...      ...      ...   \n",
-       "361       1016.1       1010.8         1         3     20.4     30.0   \n",
-       "362       1020.0       1016.9         0         1     17.2     28.2   \n",
-       "363       1024.0       1022.8         3         2     14.5     18.3   \n",
-       "364       1021.0       1016.2         6         7     15.8     25.9   \n",
-       "365       1009.6       1009.2         1         1     23.8     28.6   \n",
+       "   Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  Temp3pm  RainToday  \\\n",
+       "0       1019.7       1015.0         7         7     14.4     23.6         No   \n",
+       "1       1012.4       1008.4         5         3     17.5     25.7        Yes   \n",
+       "2       1009.5       1007.2         8         7     15.4     20.2        Yes   \n",
+       "3       1005.5       1007.0         2         7     13.5     14.1        Yes   \n",
+       "4       1018.3       1018.5         7         7     11.1     15.4        Yes   \n",
+       "5       1023.8       1021.7         7         5     10.9     14.8         No   \n",
+       "6       1024.6       1022.2         4         6     12.4     17.3         No   \n",
+       "7       1026.2       1024.2         6         7     12.1     15.5         No   \n",
+       "8       1026.1       1022.7         7         7     14.1     18.9         No   \n",
+       "9       1024.1       1020.7         7         1     13.3     21.7        Yes   \n",
        "\n",
-       "     RainToday  RISK_MM RainTomorrow  \n",
-       "0           No      3.6          Yes  \n",
-       "1          Yes      3.6          Yes  \n",
-       "2          Yes     39.8          Yes  \n",
-       "3          Yes      2.8          Yes  \n",
-       "4          Yes      0.0           No  \n",
-       "..         ...      ...          ...  \n",
-       "361         No      0.0           No  \n",
-       "362         No      0.0           No  \n",
-       "363         No      0.0           No  \n",
-       "364         No      0.0           No  \n",
-       "365         No      0.0           No  \n",
+       "   RISK_MM RainTomorrow  \n",
+       "0      3.6          Yes  \n",
+       "1      3.6          Yes  \n",
+       "2     39.8          Yes  \n",
+       "3      2.8          Yes  \n",
+       "4      0.0           No  \n",
+       "5      0.2           No  \n",
+       "6      0.0           No  \n",
+       "7      0.0           No  \n",
+       "8     16.2          Yes  \n",
+       "9      0.0           No  \n",
        "\n",
-       "[366 rows x 22 columns]"
+       "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Read CSV Data File\n",
-    "df = pd.read_csv(\"weather.csv\")\n",
-    "df"
+    "# df = pd.read_csv(\"weather.csv\")\n",
+    "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MinTemp', 'MaxTemp', 'Rainfall', 'Evaporation', 'Sunshine', 'WindGustDir', 'WindGustSpeed', 'WindDir9am', 'WindDir3pm', 'WindSpeed9am', 'WindSpeed3pm', 'Humidity9am', 'Humidity3pm', 'Pressure9am', 'Pressure3pm', 'Cloud9am', 'Cloud3pm', 'Temp9am', 'Temp3pm', 'RainToday', 'RISK_MM', 'RainTomorrow']\n"
+     ]
+    }
+   ],
    "source": [
     "# View dataframe column/ row information, size and data types \n",
     "# df.head()\n",
     "# df.tail()\n",
-    "df.shape\n",
+    "# df.shape\n",
     "# df.index\n",
-    "df.columns\n",
-    "# df.dtypes"
+    "# df.dtypes\n",
+    "# df.columns\n",
+    "\n",
+    "cols = []\n",
+    "for col in df.columns:\n",
+    "    cols.append(col)\n",
+    "print (cols)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MinTemp          180\n",
-       "MaxTemp          187\n",
-       "Rainfall          47\n",
-       "Evaporation       55\n",
-       "Sunshine         114\n",
-       "WindGustDir       16\n",
-       "WindGustSpeed     35\n",
-       "WindDir9am        16\n",
-       "WindDir3pm        16\n",
-       "WindSpeed9am      22\n",
-       "WindSpeed3pm      26\n",
-       "Humidity9am       60\n",
-       "Humidity3pm       74\n",
-       "Pressure9am      190\n",
-       "Pressure3pm      193\n",
-       "Cloud9am           9\n",
-       "Cloud3pm           9\n",
-       "Temp9am          178\n",
-       "Temp3pm          200\n",
-       "RainToday          2\n",
-       "RISK_MM           47\n",
-       "RainTomorrow       2\n",
-       "dtype: int64"
+       "MinTemp          float64\n",
+       "MaxTemp          float64\n",
+       "Rainfall         float64\n",
+       "Evaporation      float64\n",
+       "Sunshine         float64\n",
+       "WindGustDir       object\n",
+       "WindGustSpeed    float64\n",
+       "WindDir9am        object\n",
+       "WindDir3pm        object\n",
+       "WindSpeed9am     float64\n",
+       "WindSpeed3pm       int64\n",
+       "Humidity9am        int64\n",
+       "Humidity3pm        int64\n",
+       "Pressure9am      float64\n",
+       "Pressure3pm      float64\n",
+       "Cloud9am           int64\n",
+       "Cloud3pm           int64\n",
+       "Temp9am          float64\n",
+       "Temp3pm          float64\n",
+       "RainToday         object\n",
+       "RISK_MM          float64\n",
+       "RainTomorrow      object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +463,8 @@
     "# df['Evaporation'].value_counts()\n",
     "# df.count # Display a total of not null values\n",
     "# df.isna().sum() # Check null values\n",
-    "# df.info()"
+    "# df.info()\n",
+    "df.dtypes"
    ]
   },
   {
@@ -1388,7 +1374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
