--- a/04 Data Exploration/Data Works.ipynb
+++ b/04 Data Exploration/Data Works.ipynb
@@ -421,42 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MinTemp          float64\n",
-       "MaxTemp          float64\n",
-       "Rainfall         float64\n",
-       "Evaporation      float64\n",
-       "Sunshine         float64\n",
-       "WindGustDir       object\n",
-       "WindGustSpeed    float64\n",
-       "WindDir9am        object\n",
-       "WindDir3pm        object\n",
-       "WindSpeed9am     float64\n",
-       "WindSpeed3pm       int64\n",
-       "Humidity9am        int64\n",
-       "Humidity3pm        int64\n",
-       "Pressure9am      float64\n",
-       "Pressure3pm      float64\n",
-       "Cloud9am           int64\n",
-       "Cloud3pm           int64\n",
-       "Temp9am          float64\n",
-       "Temp3pm          float64\n",
-       "RainToday         object\n",
-       "RISK_MM          float64\n",
-       "RainTomorrow      object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['Rainfall'].unique() # Display non duplicate values (unique) #type:ignore\n",
     "df.nunique() # Display a total of unique values\n",
@@ -464,7 +431,8 @@
     "# df.count # Display a total of not null values\n",
     "# df.isna().sum() # Check null values\n",
     "# df.info()\n",
-    "df.dtypes"
+    "df.dtypes\n",
+    "# df.info()"
    ]
   },
   {
@@ -730,9 +698,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['MinTemp', 'MaxTemp', 'Rainfall', 'Evaporation', 'Sunshine',\n",
+       "       'WindGustDir', 'WindGustSpeed', 'WindDir9am', 'WindDir3pm',\n",
+       "       'WindSpeed9am', 'WindSpeed3pm', 'Humidity9am', 'Humidity3pm',\n",
+       "       'Pressure9am', 'Pressure3pm', 'Cloud9am', 'Cloud3pm', 'Temp9am',\n",
+       "       'Temp3pm', 'RainToday', 'RISK_MM', 'RainTomorrow'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Rename a column\n",
     "df.rename (columns = {'Wind Gust Speed' : 'WindGustSpeed'}, inplace = True)\n",
