--- a/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
+++ b/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
@@ -12,69 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CH 1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.01320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.00584</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>32.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.00000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       CH 1\n",
-       "0   0.01320\n",
-       "0   0.00584\n",
-       "0  32.00000\n",
-       "0   2.00000"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('../01 - Data/test.txt', header = None)\n",
+    "df = pd.read_csv('../01 - Data/1.txt', header = 26)\n",
     "\n",
     "df1 = pd.DataFrame()\n",
     "# df1['CHANEL  1'] = df.iloc([0].str.slice(0, 14))\n",
@@ -86,13 +28,17 @@
     "# df1['CHANEL  4'] = df[0].str.slice(16, 30)\n",
     "# df1['CHANEL  5'] = df[0].str.slice(16, 30)\n",
     "\n",
-    "df3 = pd.DataFrame()\n",
-    "df3['CH 1'] = df.iloc[0:1, 0].str.split(' ', expand = True).stack().reset_index(level=1, drop=True).to_frame('column_name')\n",
-    "df3['CH 1'].unique()\n",
-    "df3 = df3.replace('', np.nan).dropna(axis=0, how='all')\n",
-    "df3 = df3.replace('.0', 1)\n",
-    "df3['CH 1'] = pd.to_numeric(df3['CH 1'], errors='coerce')\n",
-    "df3\n"
+    "def ch1():\n",
+    "    df3 = pd.DataFrame()\n",
+    "    df3['CH 1'] = df.iloc[::7, 0].str.split(' ', expand = True).stack().reset_index(level=1, drop=True).to_frame('column_name')\n",
+    "    df3 = df3.replace('', np.nan).dropna(axis=0, how='all')\n",
+    "    df3['CH 1'] = pd.to_numeric(df3['CH 1'], errors='coerce')\n",
+    "    # print('ok')\n",
+    "    return df3\n",
+    "\n",
+    "d = ch1()\n",
+    "d.head(30)\n",
+    "d.to_csv('ch 1,.csv', index = False)"
    ]
   }
  ],
