--- a/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
+++ b/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
@@ -44,11 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ch2():\n",
+    "# A FUNCTION TO DESTRIP ALL CHANNELS 1s EXT IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def chext1():\n",
     "    dfa = df\n",
     "    df1 = pd.DataFrame()\n",
     "\n",
@@ -66,7 +70,7 @@
     "    df1 = pd.to_numeric(df1['CHAEXT 1'], errors='coerce')\n",
     "    return df1\n",
     "\n",
-    "c2 = ch2()     \n",
+    "c2 = chext1()     \n",
     "c2.to_csv('CHAEXT 1.csv', index = False)"
    ]
   }
