Channel 2 EXT  SUCCESS !!!

--- a/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
+++ b/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/allan/.virtualenvs/DSC/lib/python3.7/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +39,13 @@
     "\n",
     "\n",
     "def ch1():\n",
-    "    df3 = pd.DataFrame()\n",
+    "    df1 = pd.DataFrame()\n",
     "    # Split at the whitespace and add next elements to new Rows\n",
-    "    df3['CH 1'] = df.iloc[::7, 0].str.split(' ', expand = True).stack().reset_index(level=1, drop=True).to_frame('column_name')\n",
-    "    df3 = df3.replace('', np.nan).dropna(axis=0, how='all')\n",
-    "    df3['CH 1'] = pd.to_numeric(df3['CH 1'], errors='coerce')\n",
+    "    df1['CHANEL 1'] = df.iloc[::7, 0].str.split(' ', expand = True).stack().reset_index(level=1, drop=True).to_frame('column_name')\n",
+    "    df1 = df1.replace('', np.nan).dropna(axis=0, how='all')\n",
+    "    df1['CHANEL 1'] = pd.to_numeric(df1['CHANEL 1'], errors='coerce')\n",
     "    # print('ok')\n",
-    "    return df3\n",
+    "    return df1\n",
     "\n",
     "c1 = ch1()\n",
     "c1.to_csv('CHANEL 1.csv', index = False)"
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +63,85 @@
     "\n",
     "def chext1():\n",
     "    dfa = df\n",
-    "    df1 = pd.DataFrame()\n",
     "\n",
-    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set the mask as False or rather reversed/inversed\n",
     "    mask = ~dfa.iloc[:, 0].str.startswith('  ')\n",
     "    dfa = dfa[mask]\n",
     "\n",
     "    # Extract first 15 elements subsequently at 6 row interval\n",
-    "    df1 = pd.DataFrame()\n",
+    "    df1ex = pd.DataFrame()\n",
     "    for i in range(0, len(dfa), 6):\n",
     "        for j in range(0, len(dfa.iloc[i, 0]), 15):\n",
     "            new_row = {'CHAEXT 1': dfa.iloc[i, 0][j:j+15]}\n",
-    "            df1 = df1.append(new_row, ignore_index=True)\n",
+    "            df1ex = df1ex.append(new_row, ignore_index=True)\n",
     "\n",
-    "    df1 = pd.to_numeric(df1['CHAEXT 1'], errors='coerce')\n",
-    "    return df1\n",
+    "    df1ex = pd.to_numeric(df1ex['CHAEXT 1'], errors='coerce')\n",
+    "    return df1ex\n",
     "\n",
-    "c2 = chext1()     \n",
-    "c2.to_csv('CHAEXT 1.csv', index = False)"
+    "c1ex = chext1()     \n",
+    "c1ex.to_csv('CHAEXT 1.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A FUNCTION TO DESTRIP ALL CHANNEL 2s IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def ch2():\n",
+    "    dfb = df\n",
+    "\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    mask = ~dfb.iloc[:, 0].str.startswith('  ')\n",
+    "    dfb = dfb[mask]\n",
+    "\n",
+    "    # Extract first 15 elements subsequently at 6 row interval\n",
+    "    df2 = pd.DataFrame()\n",
+    "    for i in range(1, len(dfb), 6):\n",
+    "        for j in range(0, len(dfb.iloc[i, 0]), 15):\n",
+    "            new_row = {'CHANEL 2': dfb.iloc[i, 0][j:j+15]}\n",
+    "            df2 = df2.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    df2 = pd.to_numeric(df2['CHANEL 2'], errors='coerce')\n",
+    "    return df2\n",
+    "\n",
+    "c2 = ch2()     \n",
+    "c2.to_csv('CHANEL 2.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A FUNCTION TO DESTRIP ALL CHAEXT 2s IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def chext2():\n",
+    "    dfc = df\n",
+    "\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    mask = ~dfc.iloc[:, 0].str.startswith('  ')\n",
+    "    dfc = dfc[mask]\n",
+    "\n",
+    "    # Extract first 15 elements subsequently at 6 row interval\n",
+    "    df2ex = pd.DataFrame()\n",
+    "    for i in range(2, len(dfc), 6):\n",
+    "        for j in range(0, len(dfc.iloc[i, 0]), 15):\n",
+    "            new_row = {'CHAEXT 2': dfc.iloc[i, 0][j:j+15]}\n",
+    "            df2ex = df2ex.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    df2ex = pd.to_numeric(df2ex['CHAEXT 2'], errors='coerce')\n",
+    "    return df2ex\n",
+    "\n",
+    "c2ex = chext2()     \n",
+    "c2ex.to_csv('CHAEXT 2.csv', index = False)"
    ]
   }
  ],
