FULL TRANSFORM  SUCCESS !!!

--- a/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
+++ b/10 Deep Neural Networks/01 - DBN/02 - Cleaning/cleaner.ipynb
@@ -143,6 +143,110 @@
     "c2ex = chext2()     \n",
     "c2ex.to_csv('CHAEXT 2.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A FUNCTION TO DESTRIP ALL CHANEL 3s IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def ch3():\n",
+    "    dfd = df\n",
+    "\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    mask = ~dfd.iloc[:, 0].str.startswith('  ')\n",
+    "    dfd = dfd[mask]\n",
+    "\n",
+    "    # Extract first 15 elements subsequently at 6 row interval\n",
+    "    df3 = pd.DataFrame()\n",
+    "    for i in range(3, len(dfd), 6):\n",
+    "        for j in range(0, len(dfd.iloc[i, 0]), 15):\n",
+    "            new_row = {'CHANEL 3': dfd.iloc[i, 0][j:j+15]}\n",
+    "            df3 = df3.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    df3 = pd.to_numeric(df3['CHANEL 3'], errors='coerce')\n",
+    "    return df3\n",
+    "\n",
+    "c3 = ch3()     \n",
+    "c3.to_csv('CHANEL 3.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A FUNCTION TO DESTRIP ALL CHANEL 4s IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def ch4():\n",
+    "    dfc = df\n",
+    "\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    mask = ~dfc.iloc[:, 0].str.startswith('  ')\n",
+    "    dfc = dfc[mask]\n",
+    "\n",
+    "    # Extract first 15 elements subsequently at 6 row interval\n",
+    "    df4 = pd.DataFrame()\n",
+    "    for i in range(4, len(dfc), 6):\n",
+    "        for j in range(0, len(dfc.iloc[i, 0]), 15):\n",
+    "            new_row = {'CHANEL 4': dfc.iloc[i, 0][j:j+15]}\n",
+    "            df4 = df4.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    df4 = pd.to_numeric(df4['CHANEL 4'], errors='coerce')\n",
+    "    return df4\n",
+    "\n",
+    "c4 = ch4()     \n",
+    "c4.to_csv('CHANEL 4.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A FUNCTION TO DESTRIP ALL CHANEL 5s IN THE FILE\n",
+    "# ======================================================================================\n",
+    "\n",
+    "\n",
+    "def ch5():\n",
+    "    dfd = df\n",
+    "\n",
+    "    # Remove all Rows with a WhiteSpace uding ~ to set mask as False\n",
+    "    mask = ~dfd.iloc[:, 0].str.startswith('  ')\n",
+    "    dfd = dfd[mask]\n",
+    "\n",
+    "    # Extract first 15 elements subsequently at 6 row interval\n",
+    "    df5 = pd.DataFrame()\n",
+    "    for i in range(5, len(dfd), 6):\n",
+    "        for j in range(0, len(dfd.iloc[i, 0]), 15):\n",
+    "            new_row = {'CHANEL 5': dfd.iloc[i, 0][j:j+15]}\n",
+    "            df5 = df5.append(new_row, ignore_index=True)\n",
+    "\n",
+    "    df5 = pd.to_numeric(df5['CHANEL 5'], errors='coerce')\n",
+    "    return df5\n",
+    "\n",
+    "c5 = ch5()     \n",
+    "c5.to_csv('CHANEL 5.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = pd.concat([c1ex, c2, c2ex, c3, c4, c5], axis = 1)\n",
+    "merged.head(10)\n",
+    "merged.to_csv('Joined.csv', index=True)"
+   ]
   }
  ],
  "metadata": {
