--- a/10 Deep Neural Networks/02 - RNNs/RNN.ipynb
+++ b/10 Deep Neural Networks/02 - RNNs/RNN.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -29,18 +29,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2 = data.groupby(data.index // 5000)[['date', 'low']]\n",
-    "type(data2)\n",
-    "# data2.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = [x.assign(Bin = i) for i, x in enumerate(np.array_split(data, 3), 1)]"
+    "# Split the Data into Bins\n",
+    "\n",
+    "bins = [x.assign(Bin = i) for i, x in enumerate(np.array_split(data, 200), 1)]\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "for i in range(0, len(bins)):\n",
+    "    df = pd.concat([df, pd.DataFrame(bins[i])])\n"
    ]
   }
  ],
