--- a/10 Deep Neural Networks/02 - RNNs/RNN.ipynb
+++ b/10 Deep Neural Networks/02 - RNNs/RNN.ipynb
@@ -17,6 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -------------------------------------------------------------\n",
+    "# READ AND CLEAN STRING DATA\n",
+    "# -------------------------------------------------------------\n",
+    "\n",
     "data = pd.read_csv('00 - Data/Data_In.csv')\n",
     "data.columns = data.columns.str.replace(' ', '_')\n",
     "data.columns = data.columns.str.lower()\n",
@@ -28,21 +32,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Split the Data into Bins\n",
+    "# -------------------------------------------------------------\n",
+    "# CUT DATA INTO BINS\n",
+    "# -------------------------------------------------------------\n",
     "\n",
-    "bins = [x.assign(Bin = i) for i, x in enumerate(np.array_split(data, 200), 1)]\n",
-    "df = pd.DataFrame()\n",
+    "data_cat = pd.qcut(data['date'], 200, labels = range(0, 200))\n",
     "\n",
-    "for i in range(0, len(bins)):\n",
-    "    df = pd.concat([df, pd.DataFrame(bins[i])])\n"
+    "# Merge the Bins and DF\n",
+    "data_bin = pd.merge(left = data, right = data_cat, left_index = True, right_index = True)\n",
+    "data_bin.rename(columns = {'date_y' : 'bins'}, inplace = True)\n",
+    "\n",
+    "# Groub by Bins\n",
+    "data_g = data_bin.groupby('bins')\n",
+    "data_g.get_group(0).tail(20)"
    ]
   }
  ],
